Bug #6331 INSERT IGNORE .. SELECT breaks subsequent inserts
Submitted: 29 Oct 2004 20:17 Modified: 4 Nov 2004 8:06
Reporter: Dean Ellis
Status: Closed
Category:Server: Cluster Severity:S3 (Non-critical)
Version:4.1.8 OS:
Assigned to: Ramil Kalimullin Target Version:

[29 Oct 2004 20:17] Dean Ellis
Description:
Repeated INSERT IGNORE ... SELECT statements break subsequent INSERTs to same table.

How to repeat:
DROP TABLE IF EXISTS t1;
CREATE TABLE t1 ( a int ) ENGINE=NDB;
INSERT INTO t1 VALUES ( 1 );
INSERT IGNORE INTO t1 SELECT a FROM t1;
INSERT IGNORE INTO t1 SELECT a FROM t1;
INSERT INTO t1 VALUES ( 1 );
DROP TABLE t1;

Suggested fix:
n/a
[4 Nov 2004 8:06] Ramil Kalimullin
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.

If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information 
about accessing the source trees is available at
    http://www.mysql.com/doc/en/Installing_source_tree.html