A fix (bug #6331: INSERT IGNORE .. SELECT breaks subsequent inserts).